DAO Singleton DialogWindow created

--- a/src/sk/shrivnak/todolist/mainWindow.fxml
+++ b/src/sk/shrivnak/todolist/mainWindow.fxml
@@ -1,8 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:controller="sk.shrivnak.todolist.Controller" maxHeight="-Infinity" maxWidth="-Infinity"
-            minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"/>
+<AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="410.0" prefWidth="470.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sk.shrivnak.todolist.Controller">
+   <children>
+      <ListView fx:id="listView" layoutY="29.0" prefHeight="369.0" prefWidth="201.0" />
+      <TextArea fx:id="textArea" layoutX="208.0" layoutY="29.0" prefHeight="163.0" prefWidth="258.0" />
+      <Label layoutX="207.0" layoutY="196.0" prefHeight="17.0" prefWidth="58.0" text="DeadLine:">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Label fx:id="deadlineLabel" layoutX="273.0" layoutY="196.0" text="-" />
+      <MenuBar layoutX="6.0" prefHeight="17.0" prefWidth="50.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" text="New..." />
+                  <MenuItem mnemonicParsing="false" text="Quit" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+   </children>
+</AnchorPane>
